Sync filename refs & add placeholder page for test builds

--- a/playbook-local.yml
+++ b/playbook-local.yml
@@ -1,12 +1,11 @@
 site:
   title: Rancher
   url: /
-  start_page: latest@rancher:en:introduction.adoc
+  start_page: latest@rancher-manager:en:rancher-manager.adoc
   robots: disallow
 content:
   sources: 
   - url: .
-    branches: [main]
     # start_paths: [versions/latest, versions/v2.9, versions/v2.8] # prod
     start_paths: [versions/latest, versions/v2.8]
 ui: 
