--- a/playbook-remote.yml
+++ b/playbook-remote.yml
@@ -1,7 +1,7 @@
 site:
   title: Rancher
   url: /
-  start_page: latest@rancher:en:introduction.adoc
+  start_page: latest@rancher-manager:en:rancher-manager.adoc
   robots: disallow
 content:
   sources: 
