--- a/versions/v2.8/antora.yml
+++ b/versions/v2.8/antora.yml
@@ -1,7 +1,7 @@
 name: rancher-manager
 title: Rancher Manager
-version: latest
-display_version: 'Latest'
+version: v2.8
+display_version: 'v2.8'
 start_page: en:rancher-manager.adoc
 nav: 
 - modules/en/nav.adoc
