Fix global-resources dir structure

--- a/playbook-local.yml
+++ b/playbook-local.yml
@@ -7,7 +7,7 @@ content:
   sources: 
   - url: .
     # start_paths: [versions/latest, versions/v2.9, versions/v2.8] # prod
-    start_paths: [versions/latest, versions/v2.8]
+    start_paths: [versions/latest, versions/v2.8, global-resources]
 ui: 
   bundle:
     url: https://github.com/rancher/product-docs-ui/blob/main/build/ui-bundle.zip?raw=true
