--- a/playbook-remote.yml
+++ b/playbook-remote.yml
@@ -8,7 +8,7 @@ content:
   - url: https://github.com/rancher/rancher-product-docs
     branches: [main]
     # start_paths: [versions/latest, versions/v2.9, versions/v2.8] # prod
-    start_paths: [versions/latest, versions/v2.8] # dev
+    start_paths: [global-resources, versions/latest, versions/v2.8] # dev
 ui: 
   bundle:
     url: https://github.com/rancher/product-docs-ui/blob/main/build/ui-bundle.zip?raw=true
