Update partials - rename partials component - convert zh docs to use partials/add zh partials

--- a/playbook-local.yml
+++ b/playbook-local.yml
@@ -7,12 +7,14 @@ content:
   sources: 
   - url: .
     # start_paths: [versions/latest, versions/v2.9, versions/v2.8] # prod
-    start_paths: [versions/latest, versions/v2.8, global-resources]
+    start_paths: [shared, versions/latest, versions/v2.8]
 ui: 
   bundle:
     url: https://github.com/rancher/product-docs-ui/blob/main/build/ui-bundle.zip?raw=true
+    # url: ../product-docs-ui/build/ui-bundle.zip
     snapshot: true
-  supplemental_files: ./product-docs-supplemental-files
+  # supplemental_files: ./product-docs-supplemental-files
+  supplemental_files: ./pdsf
 asciidoc:
   attributes:
     page-pagination: ''
