Remove test elements

--- a/playbook-local.yml
+++ b/playbook-local.yml
@@ -11,10 +11,8 @@ content:
 ui: 
   bundle:
     url: https://github.com/rancher/product-docs-ui/blob/main/build/ui-bundle.zip?raw=true
-    # url: ../product-docs-ui/build/ui-bundle.zip
     snapshot: true
-  # supplemental_files: ./product-docs-supplemental-files
-  supplemental_files: ./pdsf
+  supplemental_files: ./product-docs-supplemental-files
 asciidoc:
   attributes:
     page-pagination: ''
