Update config files with product name and correct start path

--- a/playbook-local.yml
+++ b/playbook-local.yml
@@ -1,5 +1,5 @@
 site:
-  title: Rancher
+  title: SUSE® Rancher Manager
   url: /
   start_page: latest@rancher-manager:en:about-rancher/what-is-rancher.adoc
   robots: disallow
