--- a/versions/latest/antora.yml
+++ b/versions/latest/antora.yml
@@ -1,8 +1,8 @@
 name: rancher-manager
-title: Rancher Manager
+title: SUSE® Rancher Manager
 version: latest
 display_version: 'Latest'
-start_page: en:rancher-manager.adoc
+start_page: en:about-rancher/what-is-rancher.adoc
 nav: 
 - modules/en/nav.adoc
 - modules/zh/nav.adoc
