--- a/versions/v2.8/antora.yml
+++ b/versions/v2.8/antora.yml
@@ -1,8 +1,8 @@
 name: rancher-manager
-title: Rancher Manager
+title: SUSE® Rancher Manager
 version: v2.8
 display_version: 'v2.8'
-start_page: en:rancher-manager.adoc
+start_page: en:about-rancher/what-is-rancher.adoc
 nav: 
 - modules/en/nav.adoc
 - modules/zh/nav.adoc
