Use branding names

--- a/versions/v2.8/antora.yml
+++ b/versions/v2.8/antora.yml
@@ -6,3 +6,16 @@ start_page: en:about-rancher/what-is-rancher.adoc
 nav: 
 - modules/en/nav.adoc
 - modules/zh/nav.adoc
+asciidoc:
+  attributes: 
+    rancher-prime: SUSE® Rancher Prime
+    rancher-product-name: SUSE® Rancher Manager
+    harvester-product-name: SUSE® Virtualization
+    longhorn-product-name: SUSE® Storage
+    neuvector-product-name: SUSE® Security
+    kubewarden-product-name: SUSE® Rancher Prime Policy Manager
+    elemental-product-name: SUSE® Rancher Prime OS Manager
+    k3s-product-name:  SUSE® Rancher Prime Lightweight Kubernetes | K3s
+    rke2-product-name: SUSE® Rancher Prime RKE2
+    fleet-product-name: SUSE® Rancher Prime Continous Delivery
+    turtles-product-name: SUSE® Rancher Prime Cluster API
