--- a/versions/v2.8/antora.yml
+++ b/versions/v2.8/antora.yml
@@ -15,7 +15,8 @@ asciidoc:
     neuvector-product-name: SUSE® Security
     kubewarden-product-name: SUSE® Rancher Prime Policy Manager
     elemental-product-name: SUSE® Rancher Prime OS Manager
-    k3s-product-name:  SUSE® Rancher Prime Lightweight Kubernetes | K3s
+    k3s-product-name: SUSE® Rancher Prime Lightweight Kubernetes
+    k3s-long-product-name: SUSE® Rancher Prime Lightweight Kubernetes | K3s
     rke2-product-name: SUSE® Rancher Prime RKE2
     fleet-product-name: SUSE® Rancher Prime Continous Delivery
     turtles-product-name: SUSE® Rancher Prime Cluster API
