--- a/playbook-local.yml
+++ b/playbook-local.yml
@@ -6,8 +6,7 @@ site:
 content:
   sources: 
   - url: .
-    # start_paths: [versions/latest, versions/v2.9, versions/v2.8] # prod
-    start_paths: [shared, versions/latest, versions/v2.8]
+    start_paths: [shared, versions/latest, versions/v2.9, versions/v2.8]
 ui: 
   bundle:
     url: https://github.com/rancher/product-docs-ui/blob/main/build/ui-bundle.zip?raw=true
