--- a/playbook-remote.yml
+++ b/playbook-remote.yml
@@ -7,8 +7,7 @@ content:
   sources: 
   - url: https://github.com/rancher/rancher-product-docs
     branches: [main]
-    # start_paths: [versions/latest, versions/v2.9, versions/v2.8] # prod
-    start_paths: [shared, versions/latest, versions/v2.8] # dev
+    start_paths: [shared, versions/latest, versions/v2.9, versions/v2.8]
 ui: 
   bundle:
     url: https://github.com/rancher/product-docs-ui/blob/main/build/ui-bundle.zip?raw=true
