--- a/versions/latest/antora.yml
+++ b/versions/latest/antora.yml
@@ -1,7 +1,7 @@
 name: rancher-manager
 title: SUSE® Rancher Manager
 version: latest
-display_version: 'Latest'
+display_version: Latest
 start_page: en:about-rancher/what-is-rancher.adoc
 nav: 
 - modules/en/nav.adoc
