--- a/versions/latest/antora.yml
+++ b/versions/latest/antora.yml
@@ -8,15 +8,14 @@ nav:
 - modules/zh/nav.adoc
 asciidoc:
   attributes: 
-    rancher-prime: SUSE® Rancher Prime
-    rancher-product-name: SUSE® Rancher Manager
+    rancher-prime: Cloud Native
+    rancher-product-name: SUSE® Rancher Prime
     harvester-product-name: SUSE® Virtualization
     longhorn-product-name: SUSE® Storage
     neuvector-product-name: SUSE® Security
-    kubewarden-product-name: SUSE® Rancher Prime Policy Manager
-    elemental-product-name: SUSE® Rancher Prime OS Manager
-    k3s-product-name: SUSE® Rancher Prime Lightweight Kubernetes
-    k3s-long-product-name: SUSE® Rancher Prime Lightweight Kubernetes | K3s
-    rke2-product-name: SUSE® Rancher Prime RKE2
-    fleet-product-name: SUSE® Rancher Prime Continous Delivery
-    turtles-product-name: SUSE® Rancher Prime Cluster API
+    kubewarden-product-name: SUSE® Rancher Prime: Admission Policy Manager
+    elemental-product-name: SUSE® Rancher Prime: OS Manager
+    k3s-product-name: SUSE® Rancher Prime: K3s
+    rke2-product-name: SUSE® Rancher Prime: RKE2
+    fleet-product-name: SUSE® Rancher Prime: Continous Delivery
+    turtles-product-name: SUSE® Rancher Prime: Cluster API
