Enclosing attribute names in single quotes as the Antora build is breaking due to the attribute naming syntax.
Signed-off-by: Sunil Singh <sunil.singh@suse.com>

--- a/versions/latest/antora.yml
+++ b/versions/latest/antora.yml
@@ -13,9 +13,9 @@ asciidoc:
     harvester-product-name: SUSE® Virtualization
     longhorn-product-name: SUSE® Storage
     neuvector-product-name: SUSE® Security
-    kubewarden-product-name: SUSE® Rancher Prime: Admission Policy Manager
-    elemental-product-name: SUSE® Rancher Prime: OS Manager
-    k3s-product-name: SUSE® Rancher Prime: K3s
-    rke2-product-name: SUSE® Rancher Prime: RKE2
-    fleet-product-name: SUSE® Rancher Prime: Continous Delivery
-    turtles-product-name: SUSE® Rancher Prime: Cluster API
+    kubewarden-product-name: "SUSE® Rancher Prime: Admission Policy Manager"
+    elemental-product-name: "SUSE® Rancher Prime: OS Manager"
+    k3s-product-name: "SUSE® Rancher Prime: K3s"
+    rke2-product-name: "SUSE® Rancher Prime: RKE2"
+    fleet-product-name: "SUSE® Rancher Prime: Continous Delivery"
+    turtles-product-name: "SUSE® Rancher Prime: Cluster API"
