Fix invalid ref errors part 2

--- a/playbook-local.yml
+++ b/playbook-local.yml
@@ -19,7 +19,7 @@ asciidoc:
     tabs-sync-option: ''
   extensions:
   - '@asciidoctor/tabs'
-antora:
-  extensions:
-  - require: '@antora/lunr-extension'
-    languages: [en, zh]
+# antora:
+#   extensions:
+#   - require: '@antora/lunr-extension'
+#     languages: [en, zh]
