--- a/playbook-local.yml
+++ b/playbook-local.yml
@@ -6,13 +6,13 @@ site:
 content:
   sources: 
   - url: .
-    start_paths: [shared, versions/latest, versions/v2.10, versions/v2.9, versions/v2.8]
+    start_paths: [shared, versions/latest, versions/v2.11, versions/v2.10, versions/v2.9, versions/v2.8]
     branches: HEAD
-ui: 
+ui:
   bundle:
-    url: https://github.com/rancher/product-docs-ui/blob/main/build/ui-bundle.zip?raw=true
+    url: https://github.com/SUSEdoc/dsc-style-bundle/blob/main/default-ui/ui-bundle.zip?raw=true
     snapshot: true
-  supplemental_files: ./product-docs-supplemental-files
+  supplemental_files: ./dsc-style-bundle/supplemental-files/rancher
 asciidoc:
   attributes:
     page-pagination: ''
