--- a/versions/v2.10/antora.yml
+++ b/versions/v2.10/antora.yml
@@ -1,13 +1,13 @@
 name: rancher-manager
 title: SUSE® Rancher Manager
 version: v2.10
-display_version: v2.10
 start_page: en:about-rancher/what-is-rancher.adoc
-nav: 
+nav:
 - modules/en/nav.adoc
 - modules/zh/nav.adoc
 asciidoc:
-  attributes: 
+  attributes:
+    # product names
     rancher-prime: Cloud Native
     rancher-product-name: SUSE® Rancher Prime
     harvester-product-name: SUSE® Virtualization
@@ -19,3 +19,11 @@ asciidoc:
     rke2-product-name: "SUSE® Rancher Prime: RKE2"
     fleet-product-name: "SUSE® Rancher Prime: Continous Delivery"
     turtles-product-name: "SUSE® Rancher Prime: Cluster API"
+    # docs links
+    harvester-docs-version: v1.5
+    longhorn-docs-version: 1.8.0
+    neuvector-docs-version: 5.4
+    kubewarden-docs-version: 1.25
+    elemental-docs-version: 1.6
+    fleet-docs-version: v0.11
+    turtles-docs-version: v0.18
