Update xref paths on integrations page / update titles with variables

--- a/versions/v2.8/antora.yml
+++ b/versions/v2.8/antora.yml
@@ -19,3 +19,4 @@ asciidoc:
     rke2-product-name: "SUSE® Rancher Prime: RKE2"
     fleet-product-name: "SUSE® Rancher Prime: Continous Delivery"
     turtles-product-name: "SUSE® Rancher Prime: Cluster API"
+    rancher-extensions-product-name: "SUSE® Rancher Prime Extensions"
