--- a/versions/v2.9/antora.yml
+++ b/versions/v2.9/antora.yml
@@ -19,3 +19,5 @@ asciidoc:
     rke2-product-name: "SUSE® Rancher Prime: RKE2"
     fleet-product-name: "SUSE® Rancher Prime: Continous Delivery"
     turtles-product-name: "SUSE® Rancher Prime: Cluster API"
+    stackstate-product-name: "SUSE® Observability"
+    rancher-extensions-product-name: "SUSE® Rancher Prime Extensions"
