--- a/versions/v2.11/antora.yml
+++ b/versions/v2.11/antora.yml
@@ -17,7 +17,7 @@ asciidoc:
     elemental-product-name: "SUSE® Rancher Prime: OS Manager"
     k3s-product-name: "SUSE® Rancher Prime: K3s"
     rke2-product-name: "SUSE® Rancher Prime: RKE2"
-    fleet-product-name: "SUSE® Rancher Prime: Continous Delivery"
+    fleet-product-name: "SUSE® Rancher Prime: Continuous Delivery"
     turtles-product-name: "SUSE® Rancher Prime: Cluster API"
     # docs links
     harvester-docs-version: v1.5
