Update integrations page (#91)
* Draft - Update integrations page (Version:Latest)

* Update integrations page for all versions and locales

* Update xrefs for integrations page / use attributed for product names

* Update product name attributes / updates xrefs on integrations page

* Update xref paths on integrations page / update titles with variables

* Remove reference to SUSE Rancher Prime Extensions

* Update versions/latest/modules/zh/pages/integrations/integrations.adoc

Co-authored-by: Billy Tat <btat@suse.com>

---------

Co-authored-by: Billy Tat <btat@suse.com>

--- a/versions/latest/antora.yml
+++ b/versions/latest/antora.yml
@@ -19,6 +19,7 @@ asciidoc:
     rke2-product-name: "SUSE® Rancher Prime: RKE2"
     fleet-product-name: "SUSE® Rancher Prime: Continuous Delivery"
     turtles-product-name: "SUSE® Rancher Prime: Cluster API"
+    stackstate-product-name: "SUSE® Observability"
     # docs links
     harvester-docs-version: v1.5
     longhorn-docs-version: 1.8.0
