--- a/versions/v2.11/antora.yml
+++ b/versions/v2.11/antora.yml
@@ -19,6 +19,7 @@ asciidoc:
     rke2-product-name: "SUSE® Rancher Prime: RKE2"
     fleet-product-name: "SUSE® Rancher Prime: Continuous Delivery"
     turtles-product-name: "SUSE® Rancher Prime: Cluster API"
+    stackstate-product-name: "SUSE® Observability"
     # docs links
     harvester-docs-version: v1.5
     longhorn-docs-version: 1.8.0
