--- a/playbook-remote.yml
+++ b/playbook-remote.yml
@@ -23,3 +23,6 @@ antora:
   extensions:
   - require: '@antora/lunr-extension'
     languages: [en, zh]
+  - require: ./product-docs-common/extensions/dynamic-loading-attributes/load-global-site-attributes.js
+    attributefile: ./product-docs-common/global-attributes.yml
+    enabled: true
