--- a/.github/workflows/test-deploy.yml
+++ b/.github/workflows/test-deploy.yml
@@ -6,6 +6,9 @@ on:
       - '**/README.md'
     types: [opened, edited, synchronize, reopened]
 
+permissions:
+  pull-requests: write
+
 jobs:
   test-deploy:
     uses: rancher/product-docs-common/.github/workflows/test-deploy-min.yml@main
