--- a/.github/workflows/test-deploy.yml
+++ b/.github/workflows/test-deploy.yml
@@ -11,4 +11,6 @@ permissions:
 
 jobs:
   test-deploy:
-    uses: rancher/product-docs-common/.github/workflows/test-deploy-min.yml@main
+    uses: btat/product-docs-common/.github/workflows/test-deploy-min.yml@main
+    secrets:
+      token: ${{ github.token }}
