Use correct keyword

--- a/.github/workflows/test-deploy.yml
+++ b/.github/workflows/test-deploy.yml
@@ -12,5 +12,5 @@ permissions:
 jobs:
   test-deploy:
     uses: rancher/product-docs-common/.github/workflows/test-deploy-min.yml@main
-    secrets:
+    with:
       token: ${{ github.token }}
