Add MCM build as part of version latest
* Add MCM playbook files.
* Add version yml files to versions/latest/antora-yml/.
* Add bin/switch-prod-comm from turtles-product-docs.
* Add conditionals to versions/latest/modules/en/nav.adoc as a PoC.

--- a/playbook-mcm-local.yml
+++ b/playbook-mcm-local.yml
@@ -1,13 +1,13 @@
 site:
   title: SUSE® Rancher Multi Cluster Manager
   url: /
-  start_page: latest-mcm@rancher-mcm:en:about-rancher/what-is-rancher.adoc
+  start_page: latest@rancher-mcm:en:about-rancher/what-is-rancher.adoc
   robots: disallow
 content:
   sources: 
   - url: .
     branches: HEAD
-    start_paths: [shared, versions/latest-mcm]
+    start_paths: [shared, versions/latest]
 ui:
   bundle:
     url: https://github.com/SUSEdoc/dsc-style-bundle/blob/main/default-ui/ui-bundle.zip?raw=true
