--- a/versions/latest/antora-yml/antora-product.yml
+++ b/versions/latest/antora-yml/antora-product.yml
@@ -1,9 +1,10 @@
-name: rancher-mcm
-title: SUSE® Rancher Multi Cluster Manager
-version: latest-mcm
+name: rancher-manager
+title: SUSE® Rancher Manager
+version: latest
 start_page: en:about-rancher/what-is-rancher.adoc
 nav: 
 - modules/en/nav.adoc
+- modules/zh/nav.adoc
 asciidoc:
   attributes:
     # docs links
