--- a/playbook-mcm-remote.yml
+++ b/playbook-mcm-remote.yml
@@ -1,13 +1,13 @@
 site:
   title: SUSE® Rancher Multi Cluster Manager
   url: /
-  start_page: latest-mcm@rancher-mcm:en:about-rancher/what-is-rancher.adoc
+  start_page: latest@rancher-mcm:en:about-rancher/what-is-rancher.adoc
   robots: disallow
 content:
   sources: 
   - url: https://github.com/pmkovar/rancher-product-docs
-    branches: [mcm]
-    start_paths: [shared, versions/latest-mcm]
+    branches: [mcm-2]
+    start_paths: [shared, versions/latest]
 ui:
   bundle:
     url: https://github.com/SUSEdoc/dsc-style-bundle/blob/main/default-ui/ui-bundle.zip?raw=true
