--- a/versions/latest/antora.yml
+++ b/versions/latest/antora.yml
@@ -1,17 +1,1 @@
-name: rancher-manager
-title: SUSE® Rancher Manager
-version: latest
-start_page: en:about-rancher/what-is-rancher.adoc
-nav: 
-- modules/en/nav.adoc
-- modules/zh/nav.adoc
-asciidoc:
-  attributes:
-    # docs links
-    harvester-docs-version: v1.5
-    longhorn-docs-version: 1.8
-    neuvector-docs-version: 5.4
-    kubewarden-docs-version: 1.25
-    elemental-docs-version: 1.6
-    fleet-docs-version: v0.12
-    turtles-docs-version: v0.21
+antora-yml/antora-mcm.yml
