Mark antora-mcm.yml as prerelease

--- a/versions/latest/antora-yml/antora-mcm.yml
+++ b/versions/latest/antora-yml/antora-mcm.yml
@@ -1,6 +1,7 @@
 name: rancher-mcm
 title: SUSE® Rancher Multi Cluster Manager
 version: latest
+prerelease: (Unreleased)
 start_page: en:about-rancher/what-is-rancher.adoc
 nav: 
 - modules/en/nav.adoc
