Default to product version and add more Makefile targets for testing

--- a/playbook-mcm-remote.yml
+++ b/playbook-mcm-remote.yml
@@ -6,7 +6,7 @@ site:
 content:
   sources: 
   - url: https://github.com/pmkovar/rancher-product-docs
-    branches: [mcm-2]
+    branches: [mcm]
     start_paths: [shared, versions/latest]
 ui:
   bundle:
