Add MCM build for versions/v2.12/

--- a/playbook-mcm-local.yml
+++ b/playbook-mcm-local.yml
@@ -7,7 +7,7 @@ content:
   sources: 
   - url: .
     branches: HEAD
-    start_paths: [shared, versions/latest]
+    start_paths: [shared, versions/latest, versions/v2.12]
 ui:
   bundle:
     url: https://github.com/SUSEdoc/dsc-style-bundle/blob/main/default-ui/ui-bundle.zip?raw=true
