--- a/playbook-mcm-remote.yml
+++ b/playbook-mcm-remote.yml
@@ -7,7 +7,7 @@ content:
   sources: 
   - url: https://github.com/pmkovar/rancher-product-docs
     branches: [mcm]
-    start_paths: [shared, versions/latest]
+    start_paths: [shared, versions/latest, versions/v2.12]
 ui:
   bundle:
     url: https://github.com/SUSEdoc/dsc-style-bundle/blob/main/default-ui/ui-bundle.zip?raw=true
