Remove test settings

--- a/playbook-mcm-remote.yml
+++ b/playbook-mcm-remote.yml
@@ -5,8 +5,8 @@ site:
   robots: disallow
 content:
   sources: 
-  - url: https://github.com/pmkovar/rancher-product-docs
-    branches: [mcm]
+  - url: https://github.com/rancher/rancher-product-docs
+    branches: [main]
     start_paths: [shared, versions/latest, versions/v2.12]
 ui:
   bundle:
