--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -5,7 +5,7 @@ on:
   #  - cron: "0 * * * *"
   # Runs whenever a change is pushed to the main branch
   push:
-    branches: [main, mcm]
+    branches: [main]
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 concurrency:
