--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Upload Artifacts
         uses: actions/upload-pages-artifact@v3
         with:
-          path: build/site
+          path: build
       - name: Push the static site content to gh-pages branch
         run: |
           git config --global user.name "${{ github.actor }}"
