--- a/playbook-mcm-remote.yml
+++ b/playbook-mcm-remote.yml
@@ -7,7 +7,7 @@ content:
   sources: 
   - url: https://github.com/rancher/rancher-product-docs
     branches: [main]
-    start_paths: [shared, versions/latest, versions/v2.12]
+    start_paths: [shared, versions/v2.12]
 ui:
   bundle:
     url: https://github.com/SUSEdoc/dsc-style-bundle/blob/main/default-ui/ui-bundle.zip?raw=true
@@ -32,3 +32,5 @@ antora:
     attributefile: ./product-docs-common/global-attributes.yml
     enabled: true
   - require: ./extensions/unpublish-unlisted-pages-extension.js
+output:
+  dir: build/site-mcm
