Preprocess .adoc files to remove :page-languages:
* Remove unneeded bin/switch-prod-comm.
* Improve preview.yml

--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -35,32 +35,15 @@ jobs:
           node-version: "18"
       - name: Install Antora with the Antora Lunr Extension
         run: make environment
-      - name: Generate Rancher MCM Site
+      - name: Generate Documentation Sites
         run: |
-          make mcm-local
-          mkdir build/site-mcm/
-          mv build/site/* build/site-mcm/
-      - name: Generate Rancher Manager Site
-        run: make local
+          make mcm-local &
+          make local &
+          wait
       - name: Upload Artifacts
         uses: actions/upload-pages-artifact@v3
         with:
           path: build
-      - name: Push the static site content to gh-pages branch
-        run: |
-          git config --global user.name "${{ github.actor }}"
-          git config --global user.email "${{ github.actor }}@users.noreply.github.com"
-          mv build/site-mcm ../site-mcm-temp
-          mv build/site ../site-temp
-          git checkout --orphan gh-pages
-          git rm -rf .
-          rm -rf node_modules tmp
-          mkdir site-mcm
-          mv ../site-mcm-temp/* site-mcm
-          mv ../site-temp/* .
-          git add .
-          git commit -m "Deploy to gh-pages branch"
-          git push --force origin gh-pages
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
