--- a/playbook-mcm-local.yml
+++ b/playbook-mcm-local.yml
@@ -1,7 +1,7 @@
 site:
   title: SUSE® Rancher Multi Cluster Manager
   url: /
-  start_page: latest@rancher-mcm:en:about-rancher/what-is-rancher.adoc
+  start_page: v2.12@rancher-mcm:en:about-rancher/what-is-rancher.adoc
   robots: disallow
 content:
   sources: 
