Attempt to fix MCM artifacts
* MCM does not get installed in the right path.
* Do not build in parallel to make the build process more straightforward.
* Switch to remote playbooks.

--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -35,11 +35,10 @@ jobs:
           node-version: "18"
       - name: Install Antora with the Antora Lunr Extension
         run: make environment
-      - name: Generate Documentation Sites
-        run: |
-          make mcm-local &
-          make local &
-          wait
+      - name: Generate Rancher Manager Site
+        run: make remote
+      - name: Generate MCM Site
+        run: make mcm-remote
       - name: Upload Artifacts
         uses: actions/upload-pages-artifact@v3
         with:
