--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -33,16 +33,24 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "18"
+      - name: Cache node modules
+        id: cache-nodemodules
+        uses: actions/cache@v4
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
       - name: Install Antora with the Antora Lunr Extension
         run: make environment
       - name: Generate Rancher Manager Site
-        run: make remote
+        run: make local
       - name: Generate MCM Site
-        run: make mcm-remote
+        run: make mcm-local
       - name: Upload Artifacts
         uses: actions/upload-pages-artifact@v3
         with:
-          path: build
+          path: build/
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
