Updating playbook files
Signed-off-by: Sunil Singh <sunil.singh@suse.com>

--- a/playbook-local.yml
+++ b/playbook-local.yml
@@ -6,7 +6,7 @@ site:
 content:
   sources: 
   - url: .
-    start_paths: [shared, versions/latest, versions/v2.12, versions/v2.11, versions/v2.10, versions/v2.9, versions/v2.8]
+    start_paths: [shared, versions/v2.12, versions/v2.11, versions/v2.10, versions/v2.9, versions/v2.8]
     branches: HEAD
 ui:
   bundle:
@@ -26,3 +26,7 @@ antora:
   - require: ./product-docs-common/extensions/dynamic-loading-attributes/load-global-site-attributes.js
     attributefile: ./product-docs-common/global-attributes.yml
     enabled: true
+  - require: ./product-docs-common/extensions/versions-latest-prerelease/vlp.js
+    enabled: true
+output:
+  dir: build/site
