--- a/playbook-remote.yml
+++ b/playbook-remote.yml
@@ -26,3 +26,7 @@ antora:
   - require: ./product-docs-common/extensions/dynamic-loading-attributes/load-global-site-attributes.js
     attributefile: ./product-docs-common/global-attributes.yml
     enabled: true
+  - require: ./product-docs-common/extensions/versions-latest-prerelease/vlp.js
+    enabled: true
+output:
+  dir: build/site
