--- a/playbook-srfa-local.yml
+++ b/playbook-srfa-local.yml
@@ -1,7 +1,7 @@
 site:
-  title: SUSE® Rancher Multi Cluster Manager
+  title: SUSE® Rancher for AWS
   url: /
-  start_page: v2.12@rancher-mcm:en:about-rancher/what-is-rancher.adoc
+  start_page: v2.12@rancher-srfa:en:about-rancher/what-is-rancher.adoc
   robots: disallow
 content:
   sources: 
@@ -15,10 +15,10 @@ ui:
   supplemental_files: ./dsc-style-bundle/supplemental-files/rancher
 asciidoc:
   attributes:
-    build-type: 'mcm'
+    build-type: 'srfa'
     rancher-prime: Cloud Native
-    rancher-product-name: "SUSE Rancher Multi Cluster Manager"
-    rancher-product-name-tm: "SUSE® Rancher Multi Cluster Manager"
+    rancher-product-name: "SUSE Rancher for AWS"
+    rancher-product-name-tm: "SUSE® Rancher for AWS"
     rancher-short-name: "Rancher"
     page-pagination: ''
     tabs-sync-option: ''
@@ -33,4 +33,4 @@ antora:
     enabled: true
   - require: ./product-docs-common/extensions/unpublish-unlisted-pages/unpublish-unlisted-pages.js
 output:
-  dir: build/site-mcm
+  dir: ./build/site-srfa
