--- a/versions/v2.12/antora-yml/antora-srfa.yml
+++ b/versions/v2.12/antora-yml/antora-srfa.yml
@@ -1,5 +1,5 @@
-name: rancher-mcm
-title: SUSE® Rancher Multi Cluster Manager
+name: rancher-srfa
+title: SUSE® Rancher for AWS
 version: v2.12
 prerelease: (Unreleased)
 start_page: en:about-rancher/what-is-rancher.adoc
