--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -45,8 +45,8 @@ jobs:
         run: make environment
       - name: Generate Rancher Manager Site
         run: make local
-      - name: Generate MCM Site
-        run: make mcm-local
+      - name: Generate SRFA Site
+        run: make srfa-local
       - name: Upload Artifacts
         uses: actions/upload-pages-artifact@v3
         with:
