Add symlinked 'versions/srfa' to support building SRFA remotely
* This ensures there is 'antora.yml' available from remote.
* Use 'latest' since we support one version at a time.
* Build srfa-local first to ensure index.html does not default to SRFA.
* Define attributes in antora-srfa.yml to support overriding soft set
  global attrs.

--- a/versions/v2.12/antora-yml/antora-srfa.yml
+++ b/versions/v2.12/antora-yml/antora-srfa.yml
@@ -1,12 +1,18 @@
 name: rancher-srfa
 title: SUSE® Rancher for AWS
-version: v2.12
+version: latest
+display_version: Latest
 prerelease: (Unreleased)
 start_page: en:about-rancher/what-is-rancher.adoc
 nav: 
 - modules/en/nav.adoc
 asciidoc:
   attributes:
+    build-type: 'srfa'
+    rancher-prime: Cloud Native
+    rancher-product-name: "SUSE Rancher for AWS"
+    rancher-product-name-tm: "SUSE® Rancher for AWS"
+    rancher-short-name: "Rancher"
     # docs links
     harvester-docs-version: v1.5
     longhorn-docs-version: 1.8
