--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -43,14 +43,14 @@ jobs:
             ${{ runner.os }}-node-
       - name: Install Antora with the Antora Lunr Extension
         run: make environment
-      - name: Generate Rancher Manager Site
-        run: make local
       - name: Generate SRFA Site
         run: make srfa-local
+      - name: Generate Rancher Manager Site
+        run: make local
       - name: Upload Artifacts
         uses: actions/upload-pages-artifact@v3
         with:
-          path: build/
+          path: build/site/
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
