--- a/playbook-remote.yml
+++ b/playbook-remote.yml
@@ -1,7 +1,7 @@
 site:
   title: SUSE® Rancher Manager
   url: /
-  start_page: latest@rancher-manager:en:about-rancher/what-is-rancher.adoc
+  start_page: v2.12@rancher-manager:en:about-rancher/what-is-rancher.adoc
   robots: disallow
 content:
   sources: 
