--- a/playbook-srfa-remote.yml
+++ b/playbook-srfa-remote.yml
@@ -1,13 +1,13 @@
 site:
   title: SUSE® Rancher for AWS
   url: /
-  start_page: v2.12@rancher-srfa:en:about-rancher/what-is-rancher.adoc
+  start_page: latest@rancher-srfa:en:about-rancher/what-is-rancher.adoc
   robots: disallow
 content:
   sources: 
   - url: https://github.com/rancher/rancher-product-docs
     branches: [main]
-    start_paths: [shared, versions/v2.12]
+    start_paths: [shared, versions/srfa]
 ui:
   bundle:
     url: https://github.com/SUSEdoc/dsc-style-bundle/blob/main/default-ui/ui-bundle.zip?raw=true
@@ -32,5 +32,6 @@ antora:
     attributefile: ./product-docs-common/global-attributes.yml
     enabled: true
   - require: ./product-docs-common/extensions/unpublish-unlisted-pages/unpublish-unlisted-pages.js
+    component: 'rancher-srfa'
 output:
-  dir: ./build/site-srfa
+  dir: ./build/site
