Comment out prerelease for SRFA

--- a/versions/v2.12/antora-yml/antora-srfa.yml
+++ b/versions/v2.12/antora-yml/antora-srfa.yml
@@ -2,7 +2,7 @@ name: rancher-srfa
 title: SUSE® Rancher for AWS
 version: latest
 display_version: Latest
-prerelease: (Unreleased)
+#prerelease: (Unreleased)
 start_page: en:about-rancher/what-is-rancher.adoc
 nav: 
 - modules/en/nav.adoc
