Cannot use 3rd party actions

--- a/.github/workflows/generate-release-notes.yml
+++ b/.github/workflows/generate-release-notes.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Set up Ruby for Asciidoctor
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '3.1' # Or any recent version
+          ruby-version: '3.4' # Or any recent version
           bundler-cache: true
 
       - name: Install Asciidoctor
@@ -61,13 +61,16 @@ jobs:
                  "$XML_FILE"
 
       - name: Deploy to release-notes-build branch
-        uses: peaceiris/actions-gh-pages@v4
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./release-notes-build
-          publish_branch: release-notes-build
-          force_orphan: true
-          commit_message: "Generate Release Notes for ${{ inputs.version }}"
-          user_name: 'github-actions[bot]'
-          user_email: 'github-actions[bot]@users.noreply.github.com'
-          enable_jekyll: true # Do not create .nojekyll file
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          cd release-notes-build
+          git init
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          gh auth setup-git
+          git checkout --orphan release-notes-build
+          git add .
+          git commit -m "Generate Release Notes for ${{ inputs.version }}"
+          git remote add origin "https://github.com/${{ github.repository }}.git"
+          git push -f origin release-notes-build
