Re-add title to md file

--- a/.github/workflows/generate-release-notes.yml
+++ b/.github/workflows/generate-release-notes.yml
@@ -13,6 +13,11 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write # Needed to push to branch
+    env:
+      VERSION: ${{ inputs.version }}
+      INPUT_FILE: versions/${{ inputs.version }}/modules/en/pages/release-notes/${{ inputs.version }}.adoc
+      XML_FILE: release-notes-build/${{ inputs.version }}.xml
+      MARKDOWN_FILE: release-notes-build/${{ inputs.version }}.md
 
     steps:
       - name: Checkout code
@@ -37,28 +42,25 @@ jobs:
 
       - name: Convert AsciiDoc to DocBook
         run: |
-          VERSION=${{ inputs.version }}
-          INPUT_FILE="versions/${VERSION}/modules/en/pages/release-notes/${VERSION}.adoc"
-          OUTPUT_FILE="release-notes-build/${VERSION}.xml"
-
           if [ ! -f "$INPUT_FILE" ]; then
             echo "Error: Input file $INPUT_FILE not found."
             exit 1
           fi
 
-          asciidoctor -v -b docbook5 -o "$OUTPUT_FILE" "$INPUT_FILE"
+          asciidoctor -v -b docbook5 -o "$XML_FILE" "$INPUT_FILE"
 
       - name: Convert DocBook to GitHub-Flavored Markdown
         run: |
-          VERSION=${{ inputs.version }}
-          XML_FILE="release-notes-build/${VERSION}.xml"
-          MARKDOWN_FILE="release-notes-build/${VERSION}.md"
-
           pandoc -v
           pandoc --from docbook \
                  --to gfm \
                  --output "$MARKDOWN_FILE" \
                  "$XML_FILE"
+
+      - name: Add title to release notes
+        run: |
+          TITLE_LINE=$(head -n 1 "$INPUT_FILE" | sed 's/^=/#/')
+          sed -i "1i${TITLE_LINE}\n" "$MARKDOWN_FILE"
 
       - name: Deploy to release-notes-build branch
         env:
