Try to use latest pandoc that is not provided by 3rd party

--- a/.github/workflows/generate-release-notes.yml
+++ b/.github/workflows/generate-release-notes.yml
@@ -32,10 +32,12 @@ jobs:
       - name: Install Asciidoctor
         run: gem install asciidoctor
 
-      - name: Install latest Pandoc
-        uses: r-lib/actions/setup-pandoc@v2
-        with:
-          pandoc-version: 'latest'
+      - name: Install latest Pandoc via direct download
+        run: |
+          PANDOC_VERSION=$(curl -s "https://api.github.com/repos/jgm/pandoc/releases/latest" | grep -oP '"tag_name": "\K[^"]*')
+          DEB_URL="https://github.com/jgm/pandoc/releases/download/${PANDOC_VERSION}/pandoc-${PANDOC_VERSION}-1-amd64.deb"
+          curl -sL -o pandoc.deb "${DEB_URL}"
+          sudo dpkg -i pandoc.deb
 
       - name: Create release notes build directory
         run: mkdir release-notes-build
