Add conditional build for community
By default, Prime-only bits are included.

--- a/.github/workflows/generate-release-notes.yml
+++ b/.github/workflows/generate-release-notes.yml
@@ -49,7 +49,7 @@ jobs:
             exit 1
           fi
 
-          asciidoctor -v -b docbook5 -o "$XML_FILE" "$INPUT_FILE"
+          asciidoctor -v -a build-type=community -b docbook5 -o "$XML_FILE" "$INPUT_FILE"
 
       - name: Convert DocBook to GitHub-Flavored Markdown
         run: |
