Add more cmd options

--- a/.github/workflows/generate-release-maintenance.yaml
+++ b/.github/workflows/generate-release-maintenance.yaml
@@ -9,6 +9,14 @@ on:
       release_date:
         description: 'The release date (e.g., Jan 28, 2026)'
         required: true
+      prime:
+        description: 'Is this version available in Prime? (Default: y)'
+        required: false
+        default: 'y'
+      community:
+        description: 'Is this version available in Community? (Default: y)'
+        required: false
+        default: 'y'
 
 jobs:
   build-and-commit:
@@ -21,13 +29,16 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Generate Release Notes
-        run: ./release-maintenance.sh -t "${{ inputs.release_tag }}" -d "${{ inputs.release_date }}"
+      - name: Generate Release Maintenance
+        run: ./release-maintenance.sh -t "${{ inputs.release_tag }}" -d "${{ inputs.release_date }}" --prime "${{ inputs.prime }}" --community "${{ inputs.community }}"
 
       - name: Create Pull Request
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           TAG: ${{ inputs.release_tag }}
+          DATE: ${{ inputs.release_date }}
+          PRIME: ${{ inputs.prime }}
+          COMMUNITY: ${{ inputs.community }}
         run: |
           # Extract version from tag (e.g., v2.11.10-alpha1 -> v2.11.10)
           VERSION=${TAG%%-*}
@@ -38,11 +49,11 @@ jobs:
 
           git checkout -b "$BRANCH_NAME"
           git add .
-          git commit -m "$VERSION - Rancher Manager Release Maintenance"
+          git commit -m "$VERSION - Release Maintenance"
           git push origin "$BRANCH_NAME"
 
           gh pr create \
-            --title "$VERSION - Rancher Manager Release Maintenance" \
-            --body "Automated release maintenance updates for version $VERSION." \
+            --title "$VERSION - Release Maintenance" \
+            --body "Automated release maintenance updates for version $VERSION."$'\n'"Command executed: \`./release-maintenance.sh -t \"$TAG\" -d \"$DATE\" --prime \"$PRIME\" --community \"$COMMUNITY\"\`" \
             --base main \
             --head "$BRANCH_NAME"
