Set release base branch name if found

--- a/.github/workflows/generate-release-maintenance.yaml
+++ b/.github/workflows/generate-release-maintenance.yaml
@@ -44,6 +44,12 @@ jobs:
           VERSION=${TAG%%-*}
           BRANCH_NAME="${VERSION}-maintenance"
 
+          if git ls-remote --heads origin "$VERSION" | grep -q "$VERSION"; then
+            BASE_BRANCH="$VERSION"
+          else
+            BASE_BRANCH="main"
+          fi
+
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
@@ -55,5 +61,5 @@ jobs:
           gh pr create \
             --title "$VERSION - Release Maintenance" \
             --body "Automated release maintenance updates for version $VERSION."$'\n'"Command executed: \`./release-maintenance.sh -t \"$TAG\" -d \"$DATE\" --prime \"$PRIME\" --community \"$COMMUNITY\"\`" \
-            --base main \
+            --base "$BASE_BRANCH" \
             --head "$BRANCH_NAME"
