Fix 'find' command to fetch all release notes

--- a/.github/workflows/generate-release-notes.yml
+++ b/.github/workflows/generate-release-notes.yml
@@ -46,7 +46,7 @@ jobs:
             VERSION_DIR=$(echo "$VERSION" | cut -d. -f1,2)
             FILES="versions/$VERSION_DIR/modules/en/pages/release-notes/$VERSION.adoc"
           else
-            FILES=$(find versions -type f -path "versions/*/modules/en/pages/release-notes/v*.adoc")
+            FILES=$(find -type f -path "versions/*/modules/en/pages/release-notes/v*.adoc")
           fi
 
           for INPUT_FILE in $FILES; do
