Updating playbooks, Makefile, and preview workflow for single source.
Signed-off-by: Sunil Singh <sunil.singh@suse.com>

--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -45,8 +45,8 @@ jobs:
         run: make environment
       - name: Generate SRFA Site
         run: make srfa-local
-      - name: Generate Rancher Manager Site
-        run: make local
+      - name: Generate Community Rancher Manager Site
+        run: make community-local
       - name: Upload Artifacts
         uses: actions/upload-pages-artifact@v3
         with:
