--- a/playbook-product-local.yml
+++ b/playbook-product-local.yml
@@ -15,6 +15,7 @@ ui:
   supplemental_files: ./dsc-style-bundle/supplemental-files/rancher
 asciidoc:
   attributes:
+    build-type: product
     page-pagination: ''
     tabs-sync-option: ''
   extensions:
