--- a/playbook-community-local.yml
+++ b/playbook-community-local.yml
@@ -5,16 +5,17 @@ site:
   robots: disallow
 content:
   sources: 
-  - url: https://github.com/rancher/rancher-product-docs
-    branches: [main]
+  - url: .
+    branches: HEAD
     start_paths: [shared, versions/v2.13, versions/v2.12, versions/v2.11, versions/v2.10, versions/v2.9, versions/v2.8]
 ui:
   bundle:
-    url: https://github.com/SUSEdoc/dsc-style-bundle/blob/main/default-ui/ui-bundle.zip?raw=true
+    url: https://github.com/rancher/product-docs-ui/blob/main/build/ui-bundle.zip?raw=true
     snapshot: true
-  supplemental_files: ./dsc-style-bundle/supplemental-files/rancher
+  supplemental_files: ./community-supplemental-files
 asciidoc:
   attributes:
+    build-type: community
     page-pagination: ''
     tabs-sync-option: ''
   extensions:
