Updating after debug session, updates to css, playbooks, and Makefile.
Signed-off-by: Sunil Singh <sunil.singh@suse.com>

--- a/playbook-product-local.yml
+++ b/playbook-product-local.yml
@@ -7,7 +7,7 @@ content:
   sources: 
   - url: .
     branches: HEAD
-    start_paths: [shared, versions/v2.13, versions/v2.12, versions/v2.11, versions/v2.10, versions/v2.9, versions/v2.8]
+    start_paths: [shared, versions/v2.13]
 ui:
   bundle:
     url: https://github.com/SUSEdoc/dsc-style-bundle/blob/main/default-ui/ui-bundle.zip?raw=true
@@ -30,4 +30,4 @@ antora:
   - require: ./product-docs-common/extensions/versions-latest-prerelease/vlp.js
     enabled: true
 output:
-  dir: build/site
+  dir: build/site-product-local
