Adding string to playbook name
Signed-off-by: Sunil Singh <sunil.singh@suse.com>

--- a/.github/workflows/test-deploy-community.yml
+++ b/.github/workflows/test-deploy-community.yml
@@ -15,4 +15,4 @@ jobs:
     secrets:
       token: ${{ github.token }}
     inputs:
-      playbook-name: playbook-community-local.yml
+      playbook-name: 'playbook-community-local.yml'
