--- a/.github/workflows/test-deploy.yml
+++ b/.github/workflows/test-deploy.yml
@@ -15,4 +15,4 @@ jobs:
     secrets:
       token: ${{ github.token }}
     inputs:
-      playbook-name: playbook-product-local.yml
+      playbook-name: 'playbook-product-local.yml'
