Adjusting test deploy syntax
Signed-off-by: Sunil Singh <sunil.singh@suse.com>

--- a/.github/workflows/test-deploy-community.yml
+++ b/.github/workflows/test-deploy-community.yml
@@ -14,5 +14,5 @@ jobs:
     uses: rancher/product-docs-common/.github/workflows/test-deploy-min.yml@main
     secrets:
       token: ${{ github.token }}
-    inputs:
+    with:
       playbook-name: 'playbook-community-local.yml'
