--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -48,7 +48,7 @@ jobs:
       - name: Upload Artifacts
         uses: actions/upload-pages-artifact@v3
         with:
-          path: build/site/
+          path: build/site-community-local
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
