--- a/community-docs/v2.12/antora.yml
+++ b/community-docs/v2.12/antora.yml
@@ -12,5 +12,5 @@ asciidoc:
     neuvector-docs-version: 5.4
     kubewarden-docs-version: 1.25
     elemental-docs-version: 1.6
-    fleet-docs-version: v0.12
+    fleet-docs-version: 0.12
     turtles-docs-version: v0.21
