Use --wrap=none.
Add workaround for admonition boxes with lists and no preceding para.
A pandoc bug?

--- a/.github/workflows/generate-release-notes.yml
+++ b/.github/workflows/generate-release-notes.yml
@@ -65,12 +65,23 @@ jobs:
             # Convert AsciiDoc to DocBook
             asciidoctor -v -a build-type=community -b docbook5 -o "$XML_FILE" "$INPUT_FILE"
 
+            # Workaround for admonition boxes with lists and no preceding para
+            # A pandoc bug?
+            sed -i '/^<important>$/{N;s/^<important>\n<itemizedlist>/<important><simpara>\&#8203;<\/simpara>\n<itemizedlist>/}' "$XML_FILE"
+
             # Convert DocBook to GitHub-Flavored Markdown
             pandoc -v
             pandoc --from docbook \
                    --to gfm \
+                   --wrap=none \
                    --output "$MARKDOWN_FILE" \
                    "$XML_FILE"
+
+            # Remove the empty lines added by the workaround above
+            sed -i '/^> \[!IMPORTANT\]$/{N;N;s/\n>.*\n>.*//}' "$MARKDOWN_FILE"
+
+            # Add an extra # to each Markdown header due to a missing title
+            sed -i 's/^#/##/' "$MARKDOWN_FILE"
 
             # Re-add title to release notes.
             # A pandoc bug?
