Adding back in version sources for product-playbook
Signed-off-by: Sunil Singh <sunil.singh@suse.com>

--- a/playbook-product-local.yml
+++ b/playbook-product-local.yml
@@ -7,7 +7,7 @@ content:
   sources: 
   - url: .
     branches: HEAD
-    start_paths: [shared, versions/v2.13]
+    start_paths: [shared, versions/v2.13, versions/v2.12, versions/v2.11, versions/v2.10, versions/v2.9, versions/v2.8]
 ui:
   bundle:
     url: https://github.com/SUSEdoc/dsc-style-bundle/blob/main/default-ui/ui-bundle.zip?raw=true
