--- a/versions/v2.8/antora.yml
+++ b/versions/v2.8/antora.yml
@@ -1,7 +1,7 @@
 name: rancher-manager
 title: SUSE® Rancher Manager
 version: v2.8
-start_page: en:about-rancher/what-is-rancher.adoc
+start_page: en:v2.8.adoc
 nav:
 - modules/en/nav.adoc
 - modules/zh/nav.adoc
