Modules should be ROOT

--- a/community-docs/v2.12/antora.yml
+++ b/community-docs/v2.12/antora.yml
@@ -3,7 +3,7 @@ title: Rancher
 version: v2.12
 start_page: ROOT:rancher-manager.adoc
 nav: 
-- modules/en/nav.adoc
+- modules/ROOT/nav.adoc
 asciidoc:
   attributes:
     # docs links
