Moving search funtionality to toolbar from header. Adding index only latest attr to playbook files, syncing with DSC.
Signed-off-by: Sunil Singh <sunil.singh@suse.com>

--- a/playbook-community-local.yml
+++ b/playbook-community-local.yml
@@ -43,6 +43,7 @@ asciidoc:
 antora:
   extensions:
   - require: '@antora/lunr-extension'
+    index_latest_only: true
     languages: [en, zh]
   - require: ./product-docs-common/extensions/versions-latest-prerelease/vlp.js
     enabled: true
