--- a/playbook-community-remote.yml
+++ b/playbook-community-remote.yml
@@ -43,6 +43,7 @@ asciidoc:
 antora:
   extensions:
   - require: '@antora/lunr-extension'
+    index_latest_only: true
     languages: [en, zh]
   - require: ./product-docs-common/extensions/versions-latest-prerelease/vlp.js
     enabled: true
