--- a/playbook-product-remote.yml
+++ b/playbook-product-remote.yml
@@ -23,6 +23,7 @@ asciidoc:
 antora:
   extensions:
   - require: '@antora/lunr-extension'
+    index_latest_only: true
     languages: [en, zh]
   - require: ./product-docs-common/extensions/dynamic-loading-attributes/load-global-site-attributes.js
     attributefile: ./product-docs-common/global-attributes.yml
