--- a/playbook-srfa-remote.yml
+++ b/playbook-srfa-remote.yml
@@ -27,6 +27,7 @@ asciidoc:
 antora:
   extensions:
   - require: '@antora/lunr-extension'
+    index_latest_only: true
     languages: [en]
   - require: ./product-docs-common/extensions/dynamic-loading-attributes/load-global-site-attributes.js
     attributefile: ./product-docs-common/global-attributes.yml
