Re-running workflow no longer creates a new PR
* If a PR for the same version already exists, update the existing PR.

--- a/.github/workflows/generate-release-maintenance.yaml
+++ b/.github/workflows/generate-release-maintenance.yaml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       release_tag:
-        description: 'The release version (e.g., v2.11.10-alpha1)'
+        description: 'The release tag (e.g., v2.11.10-alpha1)'
         required: true
       release_date:
         description: 'The release date (e.g., Jan 28, 2026)'
@@ -56,10 +56,18 @@ jobs:
           git checkout -b "$BRANCH_NAME"
           git add .
           git commit -m "$VERSION - Release Maintenance"
-          git push origin "$BRANCH_NAME"
+          git push -f origin "$BRANCH_NAME"
 
-          gh pr create \
-            --title "$VERSION - Release Maintenance" \
-            --body "Automated release maintenance updates for version $VERSION."$'\n'"Command executed: \`./release-maintenance.sh -t \"$TAG\" -d \"$DATE\" --prime \"$PRIME\" --community \"$COMMUNITY\"\`" \
-            --base "$BASE_BRANCH" \
-            --head "$BRANCH_NAME"
+          PR_NUMBER=$(gh pr list --head "$BRANCH_NAME" --base "$BASE_BRANCH" --json number --jq '.[0].number')
+
+          if [[ -n "$PR_NUMBER" && "$PR_NUMBER" != "null" ]]; then
+            gh pr edit "$PR_NUMBER" \
+              --title "$VERSION - Release Maintenance" \
+              --body "Automated release maintenance updates for version $VERSION."$'\n'"Command executed: \`./release-maintenance.sh -t \"$TAG\" -d \"$DATE\" --prime \"$PRIME\" --community \"$COMMUNITY\"\`"
+          else
+            gh pr create \
+              --title "$VERSION - Release Maintenance" \
+              --body "Automated release maintenance updates for version $VERSION."$'\n'"Command executed: \`./release-maintenance.sh -t \"$TAG\" -d \"$DATE\" --prime \"$PRIME\" --community \"$COMMUNITY\"\`" \
+              --base "$BASE_BRANCH" \
+              --head "$BRANCH_NAME"
+          fi
