[Community] Update file paths

--- a/playbook-community-local.yml
+++ b/playbook-community-local.yml
@@ -1,13 +1,13 @@
 site:
   title: SUSE® Rancher Manager
   url: /
-  start_page: v2.13@rancher-manager:en:about-rancher/what-is-rancher.adoc
+  start_page: v2.13@ROOT:ROOT:rancher-manager.adoc
   robots: disallow
 content:
   sources: 
   - url: .
     branches: HEAD
-    start_paths: [shared, versions/v2.13, versions/v2.12, versions/v2.11, versions/v2.10, versions/v2.9, versions/v2.8]
+    start_paths: [shared, community-docs/v2.13, community-docs/v2.12, community-docs/v2.11, community-docs/v2.10, community-docs/v2.9, community-docs/v2.8]
 ui:
   bundle:
     url: https://github.com/rancher/product-docs-ui/blob/main/build/ui-bundle.zip?raw=true
@@ -37,7 +37,6 @@ antora:
   extensions:
   - require: '@antora/lunr-extension'
     index_latest_only: true
-    languages: [en, zh]
   - require: ./product-docs-common/extensions/versions-latest-prerelease/vlp.js
     enabled: true
 output:
