[Community] v2.8 does not exist

--- a/playbook-community-remote.yml
+++ b/playbook-community-remote.yml
@@ -7,7 +7,7 @@ content:
   sources: 
   - url: https://github.com/rancher/rancher-product-docs
     branches: [main]
-    start_paths: [shared, community-docs/v2.13, community-docs/v2.12, community-docs/v2.11, community-docs/v2.10, community-docs/v2.9, community-docs/v2.8]
+    start_paths: [shared, community-docs/v2.13, community-docs/v2.12, community-docs/v2.11, community-docs/v2.10, community-docs/v2.9]
 ui:
   bundle:
     url: https://github.com/rancher/product-docs-ui/blob/main/build/ui-bundle.zip?raw=true
