--- a/playbook-community-local.yml
+++ b/playbook-community-local.yml
@@ -31,6 +31,7 @@ asciidoc:
     turtles-product-name: "Turtles"
     rancher-prime: "Rancher"
     rancher-product-name: "Rancher"
+    rancher-helm-repo: "rancher-latest"
   extensions:
   - '@asciidoctor/tabs'
 antora:
