Add rancher-helm-repo attribute via antora.yml

--- a/versions/v2.13/antora-yml/antora-srfa.yml
+++ b/versions/v2.13/antora-yml/antora-srfa.yml
@@ -13,6 +13,7 @@ asciidoc:
     rancher-product-name: "SUSE Rancher for AWS"
     rancher-product-name-tm: "SUSE® Rancher for AWS"
     rancher-short-name: "Rancher"
+    rancher-helm-repo: "rancher-prime"
     # docs links
     harvester-docs-version: v1.7
     longhorn-docs-version: 1.10
