--- a/versions/v2.9/antora.yml
+++ b/versions/v2.9/antora.yml
@@ -7,6 +7,7 @@ nav:
 - modules/zh/nav.adoc
 asciidoc:
   attributes:
+    rancher-helm-repo: "rancher-prime"
     # docs links
     harvester-docs-version: v1.4
     longhorn-docs-version: 1.8
