--- a/community-docs/v2.13/antora.yml
+++ b/community-docs/v2.13/antora.yml
@@ -6,6 +6,7 @@ nav:
 - modules/ROOT/nav.adoc
 asciidoc:
   attributes:
+    rancher-helm-repo: "rancher-latest"
     # docs links
     harvester-docs-version: v1.7
     longhorn-docs-version: 1.10
