--- a/.github/workflows/test-deploy.yml
+++ b/.github/workflows/test-deploy.yml
@@ -1,4 +1,5 @@
 name: Test deployment
+run-name: Test deployment (Product)
 
 on:
   pull_request:
@@ -11,8 +12,12 @@ permissions:
 
 jobs:
   test-deploy:
+    strategy:
+      fail-fast: false
+      matrix:
+        playbook: ['playbook-product-local.yml', 'playbook-srfa-local.yml']
     uses: rancher/product-docs-common/.github/workflows/test-deploy-min.yml@main
     secrets:
       token: ${{ github.token }}
     with:
-      playbook-name: 'playbook-product-local.yml'
+      playbook-name: ${{ matrix.playbook }}
