Add quotes to fix version parsing

--- a/versions/v2.13/antora-yml/antora-product.yml
+++ b/versions/v2.13/antora-yml/antora-product.yml
@@ -9,7 +9,7 @@ asciidoc:
   attributes:
     # docs links
     harvester-docs-version: v1.7
-    longhorn-docs-version: 1.10
+    longhorn-docs-version: "1.10"
     neuvector-docs-version: 5.4
     kubewarden-docs-version: 1.31
     elemental-docs-version: 1.7
