--- a/versions/v2.8/antora.yml
+++ b/versions/v2.8/antora.yml
@@ -1,6 +1,6 @@
 name: rancher-manager
 title: SUSE® Rancher Manager
-version: v2.8 (Archived)
+version: v2.8
 start_page: en:v2.8.adoc
 nav:
 - modules/en/nav.adoc
